Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.3, 6.8.1, 6.9
-
None
-
425a1032b (dev)
Description
Consider the following code
import QtQuick import Qt.labs.lottieqt Item { LottieAnimation { quality: LottieAnimation.MediumQuality } }
When trying to build it with qmlsc the geneated code fails to build with
fatal error: lottieanimation.h: No such file or directory 17 | #include <lottieanimation.h> | ^~~~~~~~~~~~~~~~~~~
The Qt installation from the online installer doesn't seem to include a lottieanimation.h file at all, and manually building qtlottie doesn't install one either
Attachments
For Gerrit Dashboard: QTBUG-132404 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
648408,3 | Export QLottieAnimation | dev | qt/qtlottie | Status: MERGED | +2 | 0 |