Export QLottieAnimation

As long as it's not exported, qmlsc can't use it in direct mode.

Fixes: QTBUG-132404
Change-Id: I986b5dc5c6cb9f2311ec85347d7546edd281cc80
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>